--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <div class="background">
             <img src="./assets/img/bg_2.png" alt="carte et illustration abstraite">
+            <img class="illustration" src="./assets/illustrations/dive.svg" alt="personnage plongeant dans un pot de peinture">
         </div>
 
         <div class="title">
@@ -23,13 +24,18 @@
                     <p>Découvre</p>
                 </div>
                 <div class="btn secondary">
-                    <p>Rejoins-nous !</p>
+                    <a href="#" title="S'inscrire">Rejoins-nous !</a>
                 </div>
             </div>
         </div>
     </header>
     <main>
-
+        <section>
+            <div>
+                <img src="" alt="mockup d'iPhone">
+            </div>
+            <div></div>
+        </section>
     </main>
     <footer>
 
