--- a/index.html
+++ b/index.html
@@ -30,11 +30,27 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="mockup container">
             <div>
-                <img src="" alt="mockup d'iPhone">
+                <div class="iphone"></div>
             </div>
-            <div></div>
+            <div>
+                <article class="active">
+                    <h2>Tu bouges, et ça se voit !</h2>
+                    <p>Nulla quis pellentesque quam. Praesent non accumsan lorem. Vivamus hendrerit interdum mi, sit
+                        amet blandit diam mollis ut.</p>
+                </article>
+                <article>
+                    <h2>Un coach pour te motiver</h2>
+                    <p>Nulla quis pellentesque quam. Praesent non accumsan lorem. Vivamus hendrerit interdum mi, sit
+                        amet blandit diam mollis ut.</p>
+                </article>
+                <article>
+                    <h2>Sors, et défis tes potes</h2>
+                    <p>Nulla quis pellentesque quam. Praesent non accumsan lorem. Vivamus hendrerit interdum mi, sit
+                        amet blandit diam mollis ut.</p>
+                </article>
+            </div>
         </section>
     </main>
     <footer>
