--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <header>
-        <div class="background">
-            <img src="./assets/img/bg_2.png" alt="carte et illustration abstraite">
-            <img class="illustration" src="./assets/illustrations/dive.svg" alt="personnage plongeant dans un pot de peinture">
+        <div class="logo">
+            <img src="./assets/img/logo_white_baseline.svg" alt="logo nomads">
         </div>
-
+        <img class="illustration" src="./assets/illustrations/dive.svg" alt="personnage plongeant dans un pot de peinture">
         <div class="title">
             <h1>Prêt à relever <br> le défi ?</h1>
             <p>
@@ -50,6 +49,33 @@
                     <p>Nulla quis pellentesque quam. Praesent non accumsan lorem. Vivamus hendrerit interdum mi, sit
                         amet blandit diam mollis ut.</p>
                 </article>
+            </div>
+        </section>
+        <section class="coach">
+            <img src="./assets/illustrations/stretching.svg" alt="personnage s'étirant">
+            <div class="container">
+                <div class="wrapper">
+                    <h2>Le coach</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies nulla et luctus aliquam. Sed vitae
+                        eleifend mauris, vel facilisis sem. Maecenas lacinia tempus magna, et efficitur quam porta id. 
+                    </p>
+                    <div class="btn secondary">
+                        <p>Download</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="division">
+            <div class="container">
+                <img src="./assets/illustrations/winning.svg" alt="personnage vainqueur avec trophée">
+                <div class="title">
+                    <h2>Rejoins TA divison</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies nulla et luctus aliquam. Sed
+                        vitae eleifend mauris, vel facilisis sem.
+                    </p>
+                </div>
             </div>
         </section>
     </main>
