--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <title> | Nomads</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/swiper/swiper.min.css">
 </head>
 <body>
     <header>
@@ -78,9 +79,26 @@
                 </div>
             </div>
         </section>
+        <section class="feedback">
+            <h2>Ils en parlent</h2>
+            <div class="container">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <p>Ok</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <p>Ko</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
+    <script src="./assets/swiper/swiper.min.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
