--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <title> | Nomads</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="assets/swiper/swiper.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -85,13 +85,34 @@
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <p>Ok</p>
+                            <div class="avi">
+                                <img src="./assets/img/profil.png" alt="portrait d'un homme">
+                            </div>
+                            <div class="comment">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies nulla et luctus
+                                    aliquam. Sed vitae eleifend mauris,
+                                </p>
+                            </div>
                         </div>
                         <div class="swiper-slide">
-                            <p>Ko</p>
+                            <div class="avi">
+                                <img src="./assets/img/profil.png" alt="portrait d'un homme">
+                            </div>
+                            <div class="comment">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies nulla et
+                                    luctus
+                                    aliquam. Sed vitae eleifend mauris,
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="quotes"><span></span><span></span></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </section>
     </main>
