--- a/index.html
+++ b/index.html
@@ -117,7 +117,34 @@
         </section>
     </main>
     <footer>
-
+        <div class="container">
+            <div class="wrapper">
+                <div class="btn">
+                    <p>Télécharger</p>
+                </div>
+                <p class="text">Android &iOS</p>
+            </div>
+            <div class="wrapper">
+                <ul class="links">
+                    <li>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <img src="./assets/pictos/twitter.svg" alt="logo twitter">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <img src="./assets/pictos/facebook.svg" alt="logo facebook">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <img src="./assets/pictos/insta.svg" alt="logo instagram">
+                        </a>
+                    </li>
+                </ul>
+                <p class="text">Suis-nous !</p>
+            </div>
+        </div>
     </footer>
     <script src="./assets/swiper/swiper.min.js"></script>
     <script src="./js/app.js"></script>
