--- a/index.html
+++ b/index.html
@@ -34,6 +34,35 @@
             <div>
                 <div class="iphone"></div>
             </div>
+            <div class="slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <article class="active">
+                            <h2>Tu bouges, et ça se voit !</h2>
+                            <p>Nulla quis pellentesque quam. Praesent non accumsan lorem. Vivamus hendrerit interdum mi,
+                                sit
+                                amet blandit diam mollis ut.</p>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="active">
+                            <h2>Un coach pour te motiver</h2>
+                            <p>Nulla quis pellentesque quam. Praesent non accumsan lorem. Vivamus hendrerit interdum mi,
+                                sit
+                                amet blandit diam mollis ut.</p>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="active">
+                            <h2>Sors, et défis tes potes</h2>
+                            <p>Nulla quis pellentesque quam. Praesent non accumsan lorem. Vivamus hendrerit interdum mi,
+                                sit
+                                amet blandit diam mollis ut.</p>
+                        </article>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
             <div>
                 <article class="active">
                     <h2>Tu bouges, et ça se voit !</h2>
