feedback tab / mobile

--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
                                 <img src="./assets/img/profil.png" alt="portrait d'un homme">
                             </div>
                             <div class="comment">
+                                <h3>Jeremy H. 33 <span>Paris 15e</span></h3>
+                                <div class="note">
+                                    <span class="active"></span>
+                                    <span class="active"></span>
+                                    <span class="active"></span>
+                                    <span class="active"></span>
+                                    <span></span>
+                                </div>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies nulla et luctus
                                     aliquam. Sed vitae eleifend mauris,
@@ -129,6 +137,14 @@
                                 <img src="./assets/img/profil.png" alt="portrait d'un homme">
                             </div>
                             <div class="comment">
+                                <h3>Jeremy H. 33 <span>Paris 15e</span></h3>
+                                <div class="note">
+                                    <span class="active"></span>
+                                    <span class="active"></span>
+                                    <span class="active"></span>
+                                    <span class="active"></span>
+                                    <span></span>
+                                </div>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies nulla et
                                     luctus
@@ -141,7 +157,6 @@
                 <div class="quotes"><span></span><span></span></div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
             </div>
         </section>
     </main>
